perfil feito com o decode jwt

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.17",
+    "expo-jwt": "^1.7.1",
     "expo-status-bar": "~1.12.1",
     "font-awesome-icons": "^1.6.0",
     "react": "18.2.0",
